[package]
name = "stackbloatless"
version = "0.1.0-alpha.2"
authors = ["zefr0x"]
edition = "2021"
description = "A clean and effective interface for stackexchange sites"
readme = "README.md"
homepage = "https://github.com/zefr0x/stackbloatless"
repository = "https://github.com/zefr0x/stackbloatless"
license = "GPL-3.0"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"
icu = { version = "1.3.2", features = ["std"] }
markdown = "1.0.0-alpha.14"
once_cell = "1.18.0"
relm4 = { version = "0.7.0-alpha.2", features = ["libadwaita", "macros"] }
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
rust-embed = "8.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
shadow-rs = "0.24.1"

[build-dependencies]
shadow-rs = "0.24.1"

[dependencies.adw]
package = "libadwaita"
version = "0.5.3"
features = ["v1_4"]

[dependencies.relm4-icons]
package = "relm4-icons"
version = "0.7.0-alpha.2"
features = [
    "menu-large",
    "loupe",
    "dock-right",
    "library",
    "history-undo",
    "earth"
    ]
