[package]
name = "stackbloatless"
version = "0.1.0-alpha.2"
authors = ["zefr0x"]
edition = "2021"
description = "A clean and effective interface for stackexchange sites"
readme = "README.md"
homepage = "https://github.com/zefr0x/stackbloatless"
repository = "https://github.com/zefr0x/stackbloatless"
license = "GPL-3.0"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"
icu = { version = "1.4.0", features = ["std"] }
markdown = "1.0.0-alpha.17"
once_cell = "1.19.0"
relm4 = { version = "0.8.1", features = ["gnome_46", "libadwaita"] }
relm4-icons = "0.8.2"
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
rust-embed = "8.3.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116" }
shadow-rs = "0.27.1"
# log = "0.4.20"
# env_logger = "0.11.1"

[build-dependencies]
shadow-rs = "0.27.1"
