[package]
name = "stackbloatless"
version = "0.1.0-alpha.2"
authors = ["zefr0x"]
edition = "2021"
description = "A clean and effective interface for stackexchange sites"
readme = "README.md"
homepage = "https://github.com/zefr0x/stackbloatless"
repository = "https://github.com/zefr0x/stackbloatless"
license = "GPL-3.0"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
i18n-embed = { version = "0.15.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.1"
icu = { version = "1.5.0", features = ["std"] }
markdown = "1.0.0-alpha.20"
once_cell = "1.19.0"
relm4 = { version = "0.8.1", features = ["gnome_46", "libadwaita"] }
relm4-icons = "0.8.3"
reqwest = { version = "0.12.7", features = ["json", "gzip"] }
rust-embed = "8.5.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
shadow-rs = "0.33.0"
# log = "0.4.20"
# env_logger = "0.11.1"

[build-dependencies]
shadow-rs = "0.33.0"
